--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
     - run: npm ci
       working-directory: ./frontend
     - run: npm run build --if-present
+      env:
+        CI: false
       working-directory: ./frontend
 
     - name: copy react to spring static resources
