--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,5 +42,6 @@ jobs:
         username: ${{secrets.USERNAME}}
         server: ${{secrets.IP}}
         ssh_private_key: ${{secrets.SSH}}
+        local-dir: toupload
         local_path: ws/target/ws-0.0.1-SNAPSHOT.jar
         remote_path: /home/mhkrkzu
